<resources>
    <string name="app_name">Messenger</string>
    <string name="your_email">Your email:</string>
    <string name="your_password">Your password:</string>
    <string name="login">LogIn</string>
    <string name="messenger">Messenger</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="logout">LogOut</string>
    <string name="input_text_message">Input text message</string>
</resources>